src/main/fabric8/sample-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
    fabric8.io/scm-tag: HEAD
    prometheus.io/port: "9779"
    fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/sample
  labels:
    expose: "true"
    provider: fabric8
    project: sample
    version: 0.0.1-SNAPSHOT
    group: com.example
  name: sample
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    project: sample
    provider: fabric8
    group: com.example
