src/main/fabric8/sample-route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    expose: "true"
    provider: fabric8
    project: sample
    version: 0.0.1-SNAPSHOT
    group: com.example
  name: sample
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: sample
